--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -54,6 +54,10 @@ header nav a:any-link {
   color: currentcolor;
 }
 
+header nav a:any-link:hover {
+  text-decoration: none;
+}
+
 /* hamburger */
 header nav .nav-hamburger {
   grid-area: hamburger;
@@ -138,14 +142,14 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  flex-basis: fit-content;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
 }
 
 header nav .nav-brand img {
-  width: 128px;
+  width: 23px;
   height: auto;
 }
 
@@ -266,3 +270,19 @@ header nav .nav-sections ul > li > ul > li {
 header nav .nav-tools {
   grid-area: tools;
 }
+
+header nav .nav-tools .default-content-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: center;
+  gap: 1.5em;
+}
+
+header nav .nav-tools .default-content-wrapper p {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+
