--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,7 +15,7 @@ header nav {
   align-items: center;
   gap: 0 24px;
   margin: auto;
-  max-width: 1248px;
+  max-width: 1400px;
   height: var(--nav-height);
   padding: 0 24px;
   font-family: var(--body-font-family);
@@ -35,7 +35,7 @@ header nav[aria-expanded='true'] {
     display: flex;
     justify-content: space-between;
     gap: 0 32px;
-    max-width: 1264px;
+    max-width: 1400px;
     padding: 0 32px;
   }
 
@@ -285,4 +285,32 @@ header nav .nav-tools .default-content-wrapper p {
   align-self: center;
 }
 
+@media (width <= 768px) {
+  header nav .nav-tools .default-content-wrapper {
+    gap: 1em;
+  }
 
+  header nav .nav-tools .default-content-wrapper p.button-container {
+    display: none;
+  }
+}
+
+/* announcement bar */
+header .announcement-bar {
+  font-size: 16px;
+}
+
+header .announcement-bar > div {
+  text-align: center;
+}
+
+header .announcement-bar > div > p {
+  margin: 0;
+  padding: 7px 1rem;
+  color: #d9e4f0;
+}
+
+header .announcement-bar > div > p a {
+  color: #fff;
+  text-decoration: underline;
+}
