--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 footer {
-  background-color: var(--light-color);
+  background-color: #191E24;
   font-size: var(--body-font-size-xs);
+  color: #d9e4f0;
 }
 
 footer .footer > div {
@@ -13,8 +14,118 @@ footer .footer p {
   margin: 0;
 }
 
+footer .footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media (width >= 900px) {
   footer .footer > div {
     padding: 40px 32px 24px;
+  }
+}
+
+/* first section */
+footer .footer .section {
+  padding: 1rem 0;
+}
+
+footer .footer .section:nth-of-type(1) ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+footer .footer .section:nth-of-type(1) > div > ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1.5rem 1rem;
+}
+
+footer .footer .section:nth-of-type(1) > div > ul > li {
+  max-width: 260px;
+  width: 100%;
+}
+
+footer .footer .section:nth-of-type(1) > div > ul > li > p {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 1.25rem;
+}
+
+footer .footer .section:nth-of-type(1) > div > ul > li > ul > li {
+  padding: 4px 0;
+  font-size: 13px;
+}
+
+/* second section */
+footer .footer .section:nth-of-type(2) {
+  border-top: 1.5px solid #404b55;
+  padding: 1.75rem 0;
+}
+
+footer .footer .section:nth-of-type(2) > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+footer .footer .section:nth-of-type(2) > div > p {
+ display: flex;
+ align-items: center;
+ gap: 10px;
+}
+
+footer .footer .section:nth-of-type(2) > div > ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+footer .footer .section:nth-of-type(2) > div > ul > li span {
+  background-color: #fff;
+  border-radius: 7px;
+}
+
+/* third section */
+footer .footer .section:nth-of-type(3) {
+  border-top: 1.5px solid #404b55;
+  font-size: 11px;
+  color: #c2ccd6;
+}
+
+footer .footer .section:nth-of-type(3) > div {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+footer .footer .section:nth-of-type(3) > div > ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+
+footer .footer .section:nth-of-type(3) > div > ul > li > a {
+  text-decoration: underline;
+}
+
+@media (width <= 768px) {
+  footer .footer .section:nth-of-type(3) > div {
+    flex-direction: column;
+    align-items: center;
   }
 }
