Update global styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,8 @@
   --light-color: #f8f8f8;
   --dark-color: #505050;
   --text-color: #131313;
-  --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --link-color: #0f62fe;
+  --link-hover-color: #3b63fb;
 
   /* fonts */
   --body-font-family: Montserrat, sans-serif, roboto, roboto-fallback;
