--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,10 +1,12 @@
 .cards > ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  grid-gap: 12px;
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
-  grid-gap: 24px;
+  width: 100%;
 }
 
 .cards > ul > li {
@@ -24,4 +26,12 @@
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
+}
+
+
+@media (width >= 768px) {
+  .cards > ul {
+    grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
+    grid-auto-rows: 1fr;
+  }
 }
