--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,14 +6,18 @@
 .hero {
   position: relative;
   padding: 40px 24px;
-  min-height: 300px;
+  min-height: 480px;
+  box-sizing: border-box;
+  color: #fff;
+  display: flex;
+  align-items: center;
 }
 
 .hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   color: var(--background-color);
+  font-size: 68px;
+  margin: 0;
+  margin-bottom: 3rem;
 }
 
 .hero picture {
@@ -33,5 +37,20 @@
 @media (width >= 900px) {
   .hero {
     padding: 40px 32px;
+  }
+}
+
+
+@media (width <= 768px) {
+  .hero {
+    min-height: unset;
+  }
+
+  .hero h1 {  
+    font-size: 48px;
+  }
+
+  .hero h3 {
+    font-size: 28px;
   }
 }
