--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
-  grid-gap: 12px;
+  grid-gap: 1.5rem;
   list-style: none;
   margin: 0;
   padding: 0;
