--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@ footer {
 
 footer .footer > div {
   margin: auto;
-  max-width: 1600px;
+  max-width: var(--max-width);;
   padding: 40px 24px 24px;
 }
 
